--- a/package.xml
+++ b/package.xml
@@ -20,5 +20,6 @@
   <depend>std_msgs</depend>
   <depend>tf</depend>
   <depend>serial</depend>
+  <depend>dynamic_reconfigure</depend>
 
 </package>
