Unify name of bias parameters with madgwick

--- a/cfg/FdilinkAhrs.cfg
+++ b/cfg/FdilinkAhrs.cfg
@@ -5,9 +5,9 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-gen.add("mag_offset_x", double_t, 0, "Magnetometer offset x (hard iron correction), x component", 0, -500, 500)
-gen.add("mag_offset_y", double_t, 0, "Magnetometer offset y (hard iron correction), y component", 0, -500, 500)
-gen.add("mag_offset_z", double_t, 0, "Magnetometer offset z (hard iron correction), z component", 0, -500, 500)
+gen.add("mag_bias_x", double_t, 0, "Magnetometer offset x (hard iron correction), x component", 0, -500, 500)
+gen.add("mag_bias_y", double_t, 0, "Magnetometer offset y (hard iron correction), y component", 0, -500, 500)
+gen.add("mag_bias_z", double_t, 0, "Magnetometer offset z (hard iron correction), z component", 0, -500, 500)
 gen.add("mag_covariance", double_t, 0, "Magnetic field covariance", 0, -500, 500)
 
 exit(gen.generate(PACKAGE, "dynamic_reconfigure_node", "FdilinkAhrs"))
