--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>fdilink_ahrs</name>
   <version>0.0.1</version>
   <description>The fdilink_ahrs package</description>
@@ -14,12 +15,15 @@
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>roscpp</depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <depend>geometry_msgs</depend>
+  <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>serial_driver</depend>
   <depend>std_msgs</depend>
-  <depend>tf</depend>
-  <depend>serial</depend>
-  <depend>dynamic_reconfigure</depend>
+  <depend>tf2_ros</depend>
 
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
